src/tests/snapshots/Shlang__tests__parser_test__struct_body.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"struct abc{};\")"
---
Ok(
    Spanned {
        unspanned: Declaration(
            Declaration {
                var_name: "abc",
                value: Spanned {
                    unspanned: StructDef(
                        StructDef {
                            name: "abc",
                            fields: [],
                        },
                    ),
                    span: (
                        10,
                        12,
                    ),
                },
            },
        ),
        span: (
            10,
            12,
        ),
    },
)
