src/tests/snapshots/Shlang__tests__parser_test__unary_operator.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"!true;\")"
---
Ok(
    Spanned {
        unspanned: UnaryNode(
            UnaryNode {
                kind: NOT,
                object: Spanned {
                    unspanned: Value(
                        Bool(
                            true,
                        ),
                    ),
                    span: (
                        1,
                        5,
                    ),
                },
            },
        ),
        span: (
            1,
            5,
        ),
    },
)
