src/tests/snapshots/Shlang__tests__parser_test__var_expr_decl_with_expr_.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"var a = 1+2+b;\")"
---
Ok(
    Spanned {
        unspanned: Declaration(
            Declaration {
                var_name: "a",
                value: Spanned {
                    unspanned: BinaryNode(
                        BinaryNode {
                            kind: ADD,
                            left: Spanned {
                                unspanned: Value(
                                    Num(
                                        1.0,
                                    ),
                                ),
                                span: (
                                    8,
                                    9,
                                ),
                            },
                            right: Spanned {
                                unspanned: BinaryNode(
                                    BinaryNode {
                                        kind: ADD,
                                        left: Spanned {
                                            unspanned: Value(
                                                Num(
                                                    2.0,
                                                ),
                                            ),
                                            span: (
                                                10,
                                                11,
                                            ),
                                        },
                                        right: Spanned {
                                            unspanned: Variable(
                                                Variable {
                                                    name: "b",
                                                },
                                            ),
                                            span: (
                                                12,
                                                13,
                                            ),
                                        },
                                    },
                                ),
                                span: (
                                    11,
                                    12,
                                ),
                            },
                        },
                    ),
                    span: (
                        9,
                        10,
                    ),
                },
            },
        ),
        span: (
            4,
            7,
        ),
    },
)
